# fileOrganiser

./: Cargo.toml
src/: finished_file_watcher.rs  main.rs
