[package]
name = "fileOrganiser"
version = "0.1.0"
authors = ["Eli Dowling <eli.jambu@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0.16"
crossbeam="0.8"
chrono="0.4"
fs_extra = "1.2.0"
argh = "0.1.4"